--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Rachel Chin</h1>
+        <h1 class='masthead-heading'>Rachel</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a student in the Penn LPS Coding Bootcamp.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Pennsylvania.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies are playing pool, camping, and guitar.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be a professional pool player.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live near Penn State University.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love analyzing and solving problems, especially if I get to learn new tools, collaborate with others, or think creatively!</p>
     </section>
 
     <footer id="footer">
